--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<img alt="A dog running in garden." height="400" src="https://images.unsplash.com/photo-1534361960057-19889db9621e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <script type="text/javascript" src="./script.js">
 </script>
 
